--- a/index.html
+++ b/index.html
@@ -5,59 +5,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800family=Roboto:wght@400;500;700;900display=swap"
+        rel="stylesheet" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+    <header class="header">
+        <nav class="header-navigation">
+            <a class="header-logo" href="./index.html">Web<span class="header-logo-part">Studio</span></a>
+            <ul class="header-menu">
+                <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
+                <li class="header-menu-item"><a class="header-menu-link" href="./portfolio.html">Portfolio</a></li>
+                <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
             </ul>
 
         </nav>
-        <address>
-            <ul>
+        <address class="address">
+            <ul class="address-soc list">
 
-                <li><a href="mailto:info@devstudio.com" target="_blank" rel="noreferrer">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" target="_blank" rel="noreferrer">+11 (000) 111-11-11</a></li>
+                <li class="address-soc-item"><a class="address-soc-link link" href="mailto:info@devstudio.com"
+                        target="_blank" rel="noreferrer">info@devstudio.com</a></li>
+                <li class="address-soc-item"><a class="address-soc-link link" href="tel:+110001111111" target="_blank"
+                        rel="noreferrer">+11 (000)
+                        111-11-11</a></li>
 
             </ul>
         </address>
     </header>
 
     <main>
-        <section>
-            <h1>Effective Solutions
+        <section class="hero">
+            <h1 class="hero-title">Effective Solutions
                 for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button type="button" class="hero-button">Order Service</button>
         </section>
-        <section>
+        <section class="benefits">
             <h2 hidden>Benefits</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
+            <ul class="benefits-list list">
+                <li class="bnefits-item">
+                    <h3 class="subtitle">Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
 
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
+                <li class="benefits-item">
+                    <h3 class="subtitle">Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
 
                 </li>
-                <li>
-                    <h3>Diligence</h3>
+                <li class="benefits-item">
+                    <h3 class="subtitle">Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
 
                 </li>
-                <li>
-                    <h3>Technologies</h3>
+                <li class="benefits-item">
+                    <h3 class="subtitle">Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
 
@@ -65,34 +73,34 @@
             </ul>
         </section>
 
-        <section>
-            <h2>What are we doing</h2>
-            <ul>
-                <li><img src="./images/imgcomp.jpg" alt="computer" width="360"></li>
-                <li><img src="./images/imgtel.jpg" alt="mobile" width="360"></li>
-                <li><img src="./images/imgcomptel.jpg" alt="computer and mobile" width="360"></li>
+        <section class="products">
+            <h2 class="ptoducts-title">What are we doing</h2>
+            <ul class="products-list list">
+                <li class="products-item"><img src="./images/imgcomp.jpg" alt="computer" width="360"></li>
+                <li class="products-item"><img src="./images/imgtel.jpg" alt="mobile" width="360"></li>
+                <li class="products-item"><img src="./images/imgcomptel.jpg" alt="computer and mobile" width="360"></li>
             </ul>
 
         </section>
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
+        <section class="team">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-list list">
+                <li class="team-item">
                     <img src="./images/imga.jpg" alt="Mark" width="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/imgb.jpg" alt="Tom" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/imgc.jpg" alt="Camila" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/imgd.jpg" alt="Daniel" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
@@ -101,9 +109,10 @@
         </section>
     </main>
 
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a href="./index.html" class="footer-logo link">Web<span class="logo">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.</p>
     </footer>
 </body>
 
