--- a/portfolio.html
+++ b/portfolio.html
@@ -15,12 +15,12 @@
 
 <body>
     <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+        <nav class="header-navigation">
+            <a href="./index.html" class="header-logo link">Web<span class="logo">Studio</span></span></a>
+            <ul class="header-menu list">
+                <li class="header-menu-item"><a href="./index.html" class="header-menu-link list">Studio</a></li>
+                <li class="header-menu-item"><a href="./portfolio.html" class="header-menu-link list">Portfolio</a></li>
+                <li class="header-menu-item"><a href="" class="header-menu-link list">Contacts</a></li>
             </ul>
 
         </nav>
@@ -76,35 +76,35 @@
                 </li>
                 <li class="projects-item">
                     <a href="" class="link">
-                        <img src="./images/imgee.jpg" alt="" width="360" height="300">
+                        <img src="./images/imgee.jpg" alt="screens" width="360" height="300">
                         <h2 class="subtitle">Screen Illustrations</h2>
                         <p class="text">Design</p>
                     </a>
                 </li>
                 <li class="projects-item">
                     <a href="" class="link">
-                        <img src="./images/imgff.jpg" alt="" width="360" height="300">
+                        <img src="./images/imgff.jpg" alt="girls" width="360" height="300">
                         <h2 class="subtitle">Online Courses</h2>
                         <p class="text">Marketing</p>
                     </a>
                 </li>
                 <li class="projects-item">
                     <a href="" class="link">
-                        <img src="./images/imgg.jpg" alt="" width="360" height="300">
+                        <img src="./images/imgg.jpg" alt="story" width="360" height="300">
                         <h2 class="subtitle">Instagram Stories Concept</h2>
                         <p class="text">Design</p>
                     </a>
                 </li>
                 <li class="projects-item">
                     <a href="" class="link">
-                        <img src="./images/imghh.jpg" alt="" width="360" height="300">
+                        <img src="./images/imghh.jpg" alt="food" width="360" height="300">
                         <h2 class="subtitle">Organic Food</h2>
                         <p class="text">Web Site</p>
                     </a>
                 </li>
                 <li class="projects-item">
                     <a href="" class="link">
-                        <img src="./images/imgii.jpg" alt="" width="360" height="300">
+                        <img src="./images/imgii.jpg" alt="coffy" width="360" height="300">
                         <h2 class="subtitle">Fresh Coffee</h2>
                         <p class="text">Web Site</p>
                     </a>
