--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a class="header-logo link" href="./index.html">Web<span class="header-logo-part">Studio</span></a>
+            <a class="header-logo link" href="./index.html">Web<span class="header-logo link">Studio</span></a>
             <ul class="header-menu">
                 <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
                 <li class="header-menu-item"><a class="header-menu-link" href="./portfolio.html">Portfolio</a></li>
