--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav class="header-navigation">
-            <a href="./index.html" class="header-logo link">Web<span class="logo">Studio</span></span></a>
+            <a href="./index.html" class="header-logo link">Web<span class="logo">Studio</span></a>
             <ul class="header-menu list">
                 <li class="header-menu-item"><a href="./index.html" class="header-menu-link list">Studio</a></li>
                 <li class="header-menu-item"><a href="./portfolio.html" class="header-menu-link list">Portfolio</a></li>
