--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a class="header-logo link" href="./index.html">Web<span class="header-logo link">Studio</span></a>
-            <ul class="header-menu">
+            <a href="./index.html" class="header-logo link"> Web<span>Studio</span></a>
+            <ul class="header-menu list">
                 <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
                 <li class="header-menu-item"><a class="header-menu-link" href="./portfolio.html">Portfolio</a></li>
                 <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
@@ -26,13 +26,10 @@
         </nav>
         <address class="address">
             <ul class="address-soc list">
-
-                <li class="address-soc-item"><a class="address-soc-link link" href="mailto:info@devstudio.com"
-                        target="_blank" rel="noreferrer">info@devstudio.com</a></li>
-                <li class="address-soc-item"><a class="address-soc-link link" href="tel:+110001111111" target="_blank"
-                        rel="noreferrer">+11 (000)
+                <li class="address-soc-item"><a class="address-soc-link link"
+                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="address-soc-item"><a class="address-soc-link link" href="tel:+110001111111">+11 (000)
                         111-11-11</a></li>
-
             </ul>
         </address>
     </header>
@@ -76,9 +73,10 @@
         <section class="products">
             <h2 class="ptoducts-title">What are we doing</h2>
             <ul class="products-list list">
-                <li class="products-item"><img src="./images/imgcomp.jpg" alt="computer" width="360"></li>
-                <li class="products-item"><img src="./images/imgtel.jpg" alt="mobile" width="360"></li>
-                <li class="products-item"><img src="./images/imgcomptel.jpg" alt="computer and mobile" width="360"></li>
+                <li class="products-item"><img src="./images/imgcomp.jpg" alt="computer" width="360" height="300"></li>
+                <li class="products-item"><img src="./images/imgtel.jpg" alt="mobile" width="360" height="300"></li>
+                <li class="products-item"><img src="./images/imgcomptel.jpg" alt="computer and mobile" width="360"
+                        height="300"></li>
             </ul>
 
         </section>
