--- a/portfolio.html
+++ b/portfolio.html
@@ -24,11 +24,13 @@
             </ul>
 
         </nav>
-        <address>
-            <ul>
+        <address class="address-link address">
+            <ul class="sddress-list list">
 
-                <li><a href="mailto:info@devstudio.com" target="_blank" rel="noreferrer">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" target="_blank" rel="noreferrer">+11 (000) 111-11-11</a></li>
+                <li class="address-list-item"><a href="mailto:info@devstudio.com" target="_blank"
+                        rel="noreferrer">info@devstudio.com</a></li>
+                <li class="address-lisr-item"><a href="tel:+110001111111" target="_blank" rel="noreferrer">+11 (000)
+                        111-11-11</a></li>
 
             </ul>
         </address>
