--- a/index.html
+++ b/index.html
@@ -45,25 +45,28 @@
             <ul class="benefits-list list">
                 <li class="bnefits-item">
                     <h3 class="subtitle">Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    <p class="text">Our goal is to identify the business problem to walk away with the perfect and
+                        creative solution.
                     </p>
 
                 </li>
                 <li class="benefits-item">
                     <h3 class="subtitle">Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <p class="text">Bring the key message to the brand's audience for the best price within the shortest
+                        possible
                         time.</p>
 
                 </li>
                 <li class="benefits-item">
                     <h3 class="subtitle">Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <p class="text">Research and confirm brands that present the strongest digital growth opportunities
+                        and minimize
                         risk.</p>
 
                 </li>
                 <li class="benefits-item">
                     <h3 class="subtitle">Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
 
                 </li>
@@ -85,23 +88,23 @@
             <ul class="team-list list">
                 <li class="team-item">
                     <img src="./images/imga.jpg" alt="Mark" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="subtitle">Mark Guerrero</h3>
+                    <p class="text">Product Designer</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/imgb.jpg" alt="Tom" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="subtitle">Tom Ford</h3>
+                    <p class="text">Frontend Developer</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/imgc.jpg" alt="Camila" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="subtitle">Camila Garcia</h3>
+                    <p class="text">Marketing</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/imgd.jpg" alt="Daniel" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="subtitle">Daniel Wilson</h3>
+                    <p class="text">UI Designer</p>
                 </li>
             </ul>
         </section>
