--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <nav class="header-navigation">
             <a href="./index.html" class="header-logo link"> Web<span>Studio</span></a>
             <ul class="header-menu list">
-                <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
-                <li class="header-menu-item"><a class="header-menu-link" href="./portfolio.html">Portfolio</a></li>
-                <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
+                <li class="header-menu-item"><a class="header-menu-link link" href="./index.html">Studio</a></li>
+                <li class="header-menu-item"><a class="header-menu-link link" href="./portfolio.html">Portfolio</a></li>
+                <li class="header-menu-item"><a class="header-menu-link link" href="">Contacts</a></li>
             </ul>
 
         </nav>
