--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
 
         <section class="products">
-            <h2 class="ptoducts-title">What are we doing</h2>
+            <h2 class="products-title">What are we doing</h2>
             <ul class="products-list list">
                 <li class="products-item"><img src="./images/imgcomp.jpg" alt="computer" width="360" height="300"></li>
                 <li class="products-item"><img src="./images/imgtel.jpg" alt="mobile" width="360" height="300"></li>
