--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
             <ul class="sddress-list list">
 
                 <li class="address-list-item"><a href="mailto:info@devstudio.com"
-                        class="address=list=link link">info@devstudio.com</a></li>
+                        class="address-list-link link">info@devstudio.com</a></li>
                 <li class="address-lisr-item"><a href="tel:+110001111111" class="address=list=link link">+11 (000)
                         111-11-11</a></li>
 
