--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
 
                 <li class="address-list-item"><a href="mailto:info@devstudio.com"
                         class="address-list-link link">info@devstudio.com</a></li>
-                <li class="address-list-item"><a href="tel:+110001111111" class="address=list=link link">+11 (000)
+                <li class="address-list-item"><a href="tel:+110001111111" class="address-list-link link">+11 (000)
                         111-11-11</a></li>
 
             </ul>
