--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </nav>
         <address class="address">
             <ul class="address-soc list">
-                <li class="address-soc-item"><a class="address-soc-link link"
+                <li class="address-soc-item"><a class="address-list-link link"
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="address-soc-item"><a class="address-soc-link link" href="tel:+110001111111">+11 (000)
+                <li class="address-soc-item"><a class="address-list-link link" href="tel:+110001111111">+11 (000)
                         111-11-11</a></li>
             </ul>
         </address>
