--- a/portfolio.html
+++ b/portfolio.html
@@ -37,9 +37,9 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="main">
             <div class="container">
-                <h1 hidden>Portfolio</h1>
+                <h1 class="visually-hidden">Portfolio</h1>
                 <ul class="buttons-menu list">
                     <li class="buttons-list-item"><button type="button" class="filters-button">All</button></li>
                     <li class="buttons-list-item"><button type="button" class="filters-button">Web Site</button></li>
@@ -53,6 +53,7 @@
                         <li class="projects-item">
                             <a href="" class="link">
                                 <img src="./images/imgaa.jpg" alt="project" width="360" height="300">
+                                <div class="link-menu"></div>
                                 <h2 class="subtitle">Banking App Interface Concept</h2>
                                 <p class="text">App</p>
                             </a>
@@ -60,6 +61,7 @@
                         <li class="projects-item">
                             <a href="" class="link">
                                 <img src="./images/imgbb.jpg" alt="phone" width="360" height="300">
+                                <div class="link-menu"></div>
                                 <h2 class="subtitle">Cashless Payment</h2>
                                 <p class="text">Marketing</p>
                             </a>
@@ -67,6 +69,7 @@
                         <li class="projects-item">
                             <a href="" class="link">
                                 <img src="./images/imgcc.jpg" alt="laptop" width="360" height="300">
+                                <div class="link-menu"></div>
                                 <h2 class="subtitle">Meditation App</h2>
                                 <p class="text">App</p>
                             </a>
@@ -74,6 +77,7 @@
                         <li class="projects-item">
                             <a href="" class="link">
                                 <img src="./images/imgdd.jpg" alt="driver" width="360" height="300">
+                                <div class="link-menu"></div>
                                 <h2 class="subtitle">Taxi Service</h2>
                                 <p class="text">Marketing</p>
                             </a>
@@ -81,6 +85,7 @@
                         <li class="projects-item">
                             <a href="" class="link">
                                 <img src="./images/imgee.jpg" alt="screens" width="360" height="300">
+                                <div class="link-menu"></div>
                                 <h2 class="subtitle">Screen Illustrations</h2>
                                 <p class="text">Design</p>
                             </a>
@@ -88,6 +93,7 @@
                         <li class="projects-item">
                             <a href="" class="link">
                                 <img src="./images/imgff.jpg" alt="girls" width="360" height="300">
+                                <div class="link-menu"></div>
                                 <h2 class="subtitle">Online Courses</h2>
                                 <p class="text">Marketing</p>
                             </a>
@@ -95,6 +101,7 @@
                         <li class="projects-item">
                             <a href="" class="link">
                                 <img src="./images/imgg.jpg" alt="story" width="360" height="300">
+                                <div class="link-menu"></div>
                                 <h2 class="subtitle">Instagram Stories Concept</h2>
                                 <p class="text">Design</p>
                             </a>
@@ -102,6 +109,7 @@
                         <li class="projects-item">
                             <a href="" class="link">
                                 <img src="./images/imghh.jpg" alt="food" width="360" height="300">
+                                <div class="link-menu"></div>
                                 <h2 class="subtitle">Organic Food</h2>
                                 <p class="text">Web Site</p>
                             </a>
@@ -109,6 +117,7 @@
                         <li class="projects-item">
                             <a href="" class="link">
                                 <img src="./images/imgii.jpg" alt="coffy" width="360" height="300">
+                                <div class="link-menu"></div>
                                 <h2 class="subtitle">Fresh Coffee</h2>
                                 <p class="text">Web Site</p>
                             </a>
