--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                 </ul>
 
             </nav>
-            <address class="address">
+            <address class="address-list address">
                 <ul class="address-soc list">
                     <li class="address-soc-item"><a class="address-list-link link"
                             href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -48,82 +48,81 @@
                     <li class="buttons-list-item"><button type="button" class="filters-button">Marketing</button></li>
                 </ul>
 
-                <div class="container">
-                    <ul class="projects-menu list">
-                        <li class="projects-item">
-                            <a href="" class="link">
-                                <img src="./images/imgaa.jpg" alt="project" width="360" height="300">
-                                <div class="link-menu"></div>
-                                <h2 class="subtitle">Banking App Interface Concept</h2>
-                                <p class="text">App</p>
-                            </a>
-                        </li>
-                        <li class="projects-item">
-                            <a href="" class="link">
-                                <img src="./images/imgbb.jpg" alt="phone" width="360" height="300">
-                                <div class="link-menu"></div>
-                                <h2 class="subtitle">Cashless Payment</h2>
-                                <p class="text">Marketing</p>
-                            </a>
-                        </li>
-                        <li class="projects-item">
-                            <a href="" class="link">
-                                <img src="./images/imgcc.jpg" alt="laptop" width="360" height="300">
-                                <div class="link-menu"></div>
-                                <h2 class="subtitle">Meditation App</h2>
-                                <p class="text">App</p>
-                            </a>
-                        </li>
-                        <li class="projects-item">
-                            <a href="" class="link">
-                                <img src="./images/imgdd.jpg" alt="driver" width="360" height="300">
-                                <div class="link-menu"></div>
-                                <h2 class="subtitle">Taxi Service</h2>
-                                <p class="text">Marketing</p>
-                            </a>
-                        </li>
-                        <li class="projects-item">
-                            <a href="" class="link">
-                                <img src="./images/imgee.jpg" alt="screens" width="360" height="300">
-                                <div class="link-menu"></div>
-                                <h2 class="subtitle">Screen Illustrations</h2>
-                                <p class="text">Design</p>
-                            </a>
-                        </li>
-                        <li class="projects-item">
-                            <a href="" class="link">
-                                <img src="./images/imgff.jpg" alt="girls" width="360" height="300">
-                                <div class="link-menu"></div>
-                                <h2 class="subtitle">Online Courses</h2>
-                                <p class="text">Marketing</p>
-                            </a>
-                        </li>
-                        <li class="projects-item">
-                            <a href="" class="link">
-                                <img src="./images/imgg.jpg" alt="story" width="360" height="300">
-                                <div class="link-menu"></div>
-                                <h2 class="subtitle">Instagram Stories Concept</h2>
-                                <p class="text">Design</p>
-                            </a>
-                        </li>
-                        <li class="projects-item">
-                            <a href="" class="link">
-                                <img src="./images/imghh.jpg" alt="food" width="360" height="300">
-                                <div class="link-menu"></div>
-                                <h2 class="subtitle">Organic Food</h2>
-                                <p class="text">Web Site</p>
-                            </a>
-                        </li>
-                        <li class="projects-item">
-                            <a href="" class="link">
-                                <img src="./images/imgii.jpg" alt="coffy" width="360" height="300">
-                                <div class="link-menu"></div>
-                                <h2 class="subtitle">Fresh Coffee</h2>
-                                <p class="text">Web Site</p>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+
+                <ul class="projects-menu list">
+                    <li class="projects-item">
+                        <a href="" class="link">
+                            <img src="./images/imgaa.jpg" alt="project" width="360" height="300">
+                            <div class="link-menu"></div>
+                            <h2 class="subtitle">Banking App Interface Concept</h2>
+                            <p class="text">App</p>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a href="" class="link">
+                            <img src="./images/imgbb.jpg" alt="phone" width="360" height="300">
+                            <div class="link-menu"></div>
+                            <h2 class="subtitle">Cashless Payment</h2>
+                            <p class="text">Marketing</p>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a href="" class="link">
+                            <img src="./images/imgcc.jpg" alt="laptop" width="360" height="300">
+                            <div class="link-menu"></div>
+                            <h2 class="subtitle">Meditation App</h2>
+                            <p class="text">App</p>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a href="" class="link">
+                            <img src="./images/imgdd.jpg" alt="driver" width="360" height="300">
+                            <div class="link-menu"></div>
+                            <h2 class="subtitle">Taxi Service</h2>
+                            <p class="text">Marketing</p>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a href="" class="link">
+                            <img src="./images/imgee.jpg" alt="screens" width="360" height="300">
+                            <div class="link-menu"></div>
+                            <h2 class="subtitle">Screen Illustrations</h2>
+                            <p class="text">Design</p>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a href="" class="link">
+                            <img src="./images/imgff.jpg" alt="girls" width="360" height="300">
+                            <div class="link-menu"></div>
+                            <h2 class="subtitle">Online Courses</h2>
+                            <p class="text">Marketing</p>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a href="" class="link">
+                            <img src="./images/imgg.jpg" alt="story" width="360" height="300">
+                            <div class="link-menu"></div>
+                            <h2 class="subtitle">Instagram Stories Concept</h2>
+                            <p class="text">Design</p>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a href="" class="link">
+                            <img src="./images/imghh.jpg" alt="food" width="360" height="300">
+                            <div class="link-menu"></div>
+                            <h2 class="subtitle">Organic Food</h2>
+                            <p class="text">Web Site</p>
+                        </a>
+                    </li>
+                    <li class="projects-item">
+                        <a href="" class="link">
+                            <img src="./images/imgii.jpg" alt="coffy" width="360" height="300">
+                            <div class="link-menu"></div>
+                            <h2 class="subtitle">Fresh Coffee</h2>
+                            <p class="text">Web Site</p>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
