--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
                 </ul>
             </div>
         </section>
+
         <section class="team">
-            <div class="container team-container">
+            <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list list">
                     <li class="team-item">
