--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,8 @@
 
             </nav>
             <address class="address-list address">
-                <ul class="address-soc list">
-                    <li class="address-soc-item"><a class="address-list-link link"
+                <ul class="address-list list">
+                    <li class="address-list-item"><a class="address-list-link link"
                             href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li class="address-soc-item"><a class="address-list-link link" href="tel:+110001111111">+11 (000)
                             111-11-11</a></li>
