--- a/index.html
+++ b/index.html
@@ -109,26 +109,26 @@
                     <li class="team-item">
                         <img src="./images/imga.jpg" alt="Mark" width="264">
                         <div class="main-info"></div>
-                        <h3 class="team-subtitle">Mark Guerrero</h3>
-                        <p class="team-item-text">Product Designer</p>
+                        <h3 class="subtitle">Mark Guerrero</h3>
+                        <p class="text">Product Designer</p>
                     </li>
                     <li class="team-item">
                         <img src="./images/imgb.jpg" alt="Tom" width="264">
                         <div class="main-info"></div>
-                        <h3 class="team-subtitle">Tom Ford</h3>
-                        <p class="team-item-text">Frontend Developer</p>
+                        <h3 class="subtitle">Tom Ford</h3>
+                        <p class="text">Frontend Developer</p>
                     </li>
                     <li class="team-item">
                         <img src="./images/imgc.jpg" alt="Camila" width="264">
                         <div class="main-info"></div>
-                        <h3 class="team-subtitle">Camila Garcia</h3>
-                        <p class="team-item-text">Marketing</p>
+                        <h3 class="subtitle">Camila Garcia</h3>
+                        <p class="text">Marketing</p>
                     </li>
                     <li class="team-item">
                         <img src="./images/imgd.jpg" alt="Daniel" width="264">
                         <div class="main-info"></div>
-                        <h3 class="team-subtitle">Daniel Wilson</h3>
-                        <p class="team-item-text">UI Designer</p>
+                        <h3 class="subtitle">Daniel Wilson</h3>
+                        <p class="text">UI Designer</p>
                     </li>
                 </ul>
             </div>
