--- a/index.html
+++ b/index.html
@@ -108,29 +108,33 @@
                 <ul class="team-list list">
                     <li class="team-item">
                         <img src="./images/imga.jpg" alt="Mark" width="264">
-                        <div class="main-info"></div>
-                        <h3 class="subtitle">Mark Guerrero</h3>
-                        <p class="text">Product Designer</p>
+                        <div class="main-info">
+                            <h3 class="subtitle">Mark Guerrero</h3>
+                            <p class="text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/imgb.jpg" alt="Tom" width="264">
-                        <div class="main-info"></div>
-                        <h3 class="subtitle">Tom Ford</h3>
-                        <p class="text">Frontend Developer</p>
+                        <div class="main-info">
+                            <h3 class="subtitle">Tom Ford</h3>
+                            <p class="text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/imgc.jpg" alt="Camila" width="264">
-                        <div class="main-info"></div>
-                        <h3 class="subtitle">Camila Garcia</h3>
-                        <p class="text">Marketing</p>
+                        <div class="main-info">
+                            <h3 class="subtitle">Camila Garcia</h3>
+                            <p class="text">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/imgd.jpg" alt="Daniel" width="264">
                         <div class="main-info"></div>
                         <h3 class="subtitle">Daniel Wilson</h3>
                         <p class="text">UI Designer</p>
-                    </li>
-                </ul>
+            </div>
+            </li>
+            </ul>
             </div>
         </section>
 
