--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
                     </li>
                     <li class="team-item">
                         <img src="./images/imgd.jpg" alt="Daniel" width="264">
-                        <div class="main-info"></div>
-                        <h3 class="subtitle">Daniel Wilson</h3>
-                        <p class="text">UI Designer</p>
-            </div>
-            </li>
-            </ul>
+                        <div class="main-info">
+                            <h3 class="subtitle">Daniel Wilson</h3>
+                            <p class="text">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
 
