--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet" />
+
+    <title>WebStudio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
         integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
-    <title>WebStudio</title>
+
 </head>
 
 <body>
@@ -31,8 +33,8 @@
 
             </nav>
             <address class="address">
-                <ul class="address-soc list">
-                    <li class="address-soc-item"><a class="address-list-link link"
+                <ul class="address-list list">
+                    <li class="address-list-item"><a class="address-list-link link"
                             href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li class="address-soc-item"><a class="address-list-link link" href="tel:+110001111111">+11 (000)
                             111-11-11</a></li>
